# editor-studio

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
crates/image/: Cargo.toml
crates/image/src/: decode.rs  lib.rs  transform.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs
crates/params/: Cargo.toml
crates/params/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs  pipelines.rs  shaders.rs  texture.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: architecture.md  mvp.md  requirements-breakdown.md  tasks.md
