[package]
name = "editor-studio-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true
console_error_panic_hook.workspace = true
editor-studio-renderer.workspace = true
editor-studio-image.workspace = true
editor-studio-params.workspace = true
editor-studio-math.workspace = true

[features]
default = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']
